# bazel-problems

./: BUILD.bazel  README  WORKSPACE  myproto.proto
mydocker/: dockerfile
